# cdsip

platform/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
platform/.github/workflows/: ci.yml
platform/apps/api-rust/: Cargo.toml
platform/apps/api-rust/src/: config.rs  errors.rs  lib.rs  main.rs  server.rs
platform/apps/api-rust/src/extractors/: auth.rs  mod.rs
platform/apps/api-rust/src/routes/: assets.rs  audit.rs  auth.rs  health.rs  incidents.rs  mod.rs  policies.rs  risk.rs  scans.rs  system.rs
platform/apps/api-rust/tests/: integration_tests.rs
platform/apps/intel-python/: pyproject.toml
platform/apps/intel-python/src/intel_service/: __init__.py  config.py  main.py
platform/apps/intel-python/src/intel_service/models/: __init__.py  anomaly.py  base.py
platform/apps/intel-python/src/intel_service/routes/: __init__.py  anomaly.py  health.py
platform/apps/intel-python/tests/: test_main.py
platform/apps/web/: next.config.ts
platform/apps/web/src/app/: globals.css  layout.tsx
platform/apps/web/src/app/dashboard/: layout.tsx  page.tsx
platform/apps/web/src/app/dashboard/assets/: page.tsx
platform/apps/web/src/app/dashboard/audit/: page.tsx
platform/apps/web/src/app/dashboard/incidents/: page.tsx
platform/apps/web/src/app/dashboard/policies/: page.tsx
platform/apps/web/src/app/dashboard/scans/: page.tsx
platform/apps/web/src/app/login/: page.tsx
platform/apps/web/src/components/: Sidebar.tsx
platform/apps/web/src/lib/: api.ts
platform/crates/audit-core/: Cargo.toml
platform/crates/audit-core/src/: lib.rs  logger.rs  storage.rs  types.rs
platform/crates/domain-models/: Cargo.toml
platform/crates/domain-models/src/: asset.rs  audit.rs  evidence.rs  incident.rs  lib.rs  policy.rs  risk.rs  scan.rs  user.rs
platform/crates/policy-engine/: Cargo.toml
platform/crates/policy-engine/src/: evaluator.rs  governor.rs  lib.rs  rules.rs  types.rs
platform/crates/risk-engine/: Cargo.toml
platform/crates/risk-engine/src/: calculator.rs  factors.rs  lib.rs  types.rs
platform/crates/tool-broker/: Cargo.toml
platform/crates/tool-broker/src/: broker.rs  executor.rs  lib.rs  registry.rs  types.rs
platform/crates/tool-broker/src/nmap/: mod.rs  parser.rs  profiles.rs  runner.rs
platform/docs/architecture/: v1-architecture.md
platform/infra/docker/: Dockerfile.api  Dockerfile.intel  Dockerfile.web
platform/infra/migrations/: 001_users_and_auth.sql  002_assets_and_networks.sql  003_scans.sql  004_incidents_and_evidence.sql  005_policies.sql  006_audit_and_tools.sql  007_risk_scores.sql  008_policy_decisions.sql  009_scan_run_execution_id.sql
platform/infra/scripts/: init-db.sh  seed-dev.sh
