[package]
name = "cdsip-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cdsip-api"
path = "src/main.rs"

[dependencies]
cdsip-domain-models = { path = "../../crates/domain-models" }
cdsip-audit-core = { path = "../../crates/audit-core" }
cdsip-policy-engine = { path = "../../crates/policy-engine" }
cdsip-tool-broker = { path = "../../crates/tool-broker" }
cdsip-risk-engine = { path = "../../crates/risk-engine" }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
