[package]
name = "cdsip-audit-core"
version.workspace = true
edition.workspace = true

[dependencies]
cdsip-domain-models = { path = "../domain-models" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
