[package]
name = "cdsip-domain-models"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
