[package]
name = "cdsip-risk-engine"
version.workspace = true
edition.workspace = true

[dependencies]
cdsip-domain-models = { path = "../domain-models" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
